[package]
name = "data_viz_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
lopdf = "0.7"
docx-rs = "0.4"
select = "0.6"
pdf-extract = "0.7.10"
zip = "0.6"
quick-xml = "0.27"
tokio = { version = "1.41", features = ["full"] }
hyper = "0.14"
tower = "0.4"
mime = "0.3"
tokio-util = "0.7"
axum = { version = "0.6", features = ["multipart"] }